[project]
name = "ablation-tests"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter>=1.1.1",
    "loguru>=0.7.3",
    "numpy>=2.3.2",
    "scipy>=1.16.1",
    "scipy-stubs>=1.16.1.1",
    "types-requests>=2.32.4.20250809",
]

[dependency-groups]
dev = [
    "mypy>=1.17.1",
]
