[project]
name = "ablation-tests"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter>=1.1.1",
    "loguru>=0.7.3",
    "matplotlib>=3.10.6",
    "numpy>=2.3.2",
    "pydantic>=2.11.7",
    "scipy>=1.16.1",
    "scipy-stubs>=1.16.1.1",
    "tqdm>=4.67.1",
    "types-requests>=2.32.4.20250809",
    "types-tqdm>=4.67.0.20250809",
]

[dependency-groups]
dev = [
    "mypy>=1.17.1",
]

[tool.mypy]
python_version = "3.13"
mypy_path = "."
